# marsFile

./: !example.mfc  .gitignore  README.md  pyproject.toml  s.json  setup.py  testing.ms  testing.msf
.github/workflows/: conda.yml
marsFile/: __init__.py  parser.py
src/: setup.py
tests/: !example.mfc  !example.py
tests/marsFile/: __init__.py
tests/titaniaLib/: Oberon.py  __init__.py
