[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marsFile"
version = "1.1"
authors = [
  { name="m4rsfox", email="m4rs_fox@outlook.com.au" },
]
description = "Python module for parsing .mfc config files!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/nnotMarss/marsFile"
Issues = "https://github.com/nnotMarss/marsFile/issues"